--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@
     --ingredientfontsize: 1.75rem;
     --ingredientfontsizetitle: 2.5rem;
 }
+
 html {
     font-size: 62.5%;
     min-height: 100vh;
@@ -19,6 +20,7 @@ html {
     font-family: 'Nunito Sans', sans-serif;
     box-sizing: border-box;
 }
+
 body {
     overflow-x: hidden;
     padding: 50px 0;
@@ -26,8 +28,9 @@ body {
     align-items: center;
     min-width: var(--maincontwidthheight);
     min-height: var(--maincontwidthheight);
-    background: linear-gradient(to bottom right,rgba(255, 166, 0, 0.35), rgba(255, 60, 0, 0.6));
+    background: linear-gradient(to bottom right, rgba(255, 166, 0, 0.35), rgba(255, 60, 0, 0.6));
 }
+
 .mainCont {
     overflow: hidden;
     background-color: white;
@@ -37,14 +40,17 @@ body {
     border-radius: 10px;
     box-shadow: 0px 0px 30px 1px rgba(0, 0, 0, 0.15);
 }
+
 main {
     display: flex;
     min-height: calc(var(--maincontwidthheight) - 10rem);
     position: relative;
 }
+
 .no-display {
     display: none !important;
 }
+
 /* HEADER */
 header {
     background-color: rgb(250, 245, 245);
@@ -54,21 +60,25 @@ header {
     justify-content: space-around;
     align-items: center;
 }
+
 header svg {
     height: var(--headersvgsize);
     width: var(--headersvgsize);
 }
+
 main svg {
     height: var(--headersvgsize);
     width: var(--headersvgsize);
     fill: rgba(255, 60, 0, 0.6);
     /* default svg config */
 }
+
 #forkify-logo {
     height: 50px;
     width: auto;
 }
-header > form {
+
+header>form {
     position: relative;
     width: 40%;
     background-color: white;
@@ -76,7 +86,8 @@ header > form {
     border-radius: 30px;
     height: 50%;
 }
-header > form input {
+
+header>form input {
     border-radius: inherit;
     font-size: var(--inputplaceholdersize);
     width: 100%;
@@ -85,17 +96,19 @@ header > form input {
     font-weight: 500;
     padding-left: 30px;
 }
-header > form input::placeholder {
+
+header>form input::placeholder {
     color: rgba(105, 105, 105, 0.7);
 }
+
 header button {
     padding: 0 30px;
 }
 
-header > form button {
+header>form button {
     color: white;
     font-size: calc(var(--headerbtntext) + 2px);
-    background: linear-gradient(to bottom right,rgba(255, 166, 0, 0.35), rgba(255, 60, 0, 0.6));
+    background: linear-gradient(to bottom right, rgba(255, 166, 0, 0.35), rgba(255, 60, 0, 0.6));
     height: 100%;
     outline: none;
     border: none;
@@ -108,17 +121,21 @@ header > form button {
     cursor: pointer;
     transition: all 0.2s;
 }
-header > form button:hover {
+
+header>form button:hover {
     transform: scale(1.05);
 }
-header button > svg {
+
+header button>svg {
     margin-right: 10px;
     fill: currentColor
 }
+
 .recipe-and-bookmark-cont {
     display: flex;
     height: 100%;
 }
+
 .recipe-and-bookmark-cont button {
     color: rgba(50, 50, 50, 0.9);
     display: flex;
@@ -133,18 +150,22 @@ header button > svg {
     cursor: pointer;
     transition: all 0.2s;
 }
+
 .recipe-and-bookmark-cont button svg {
     fill: rgba(255, 60, 0, 0.6);
 }
+
 .recipe-and-bookmark-cont button:hover {
     background-color: rgb(230, 230, 230);
 }
+
 /* LIST OF RECIPES */
 .recipe-list-cont {
     height: 70rem;
     width: 40%;
     overflow: hidden;
 }
+
 .recipe-list {
     padding: 1.5rem 0;
     height: 100%;
@@ -152,9 +173,16 @@ header button > svg {
     display: flex;
     transition: all 0.3s;
 }
+
 .pagenation-part {
     min-width: 100%;
+    overflow-y: scroll;
 }
+
+.pagenation-part::-webkit-scrollbar {
+    display: none;
+}
+
 .available-recipe {
     display: flex;
     align-items: center;
@@ -164,9 +192,11 @@ header button > svg {
     margin-bottom: 2.5rem;
     min-height: 12rem;
 }
+
 .recipe-list::-webkit-scrollbar {
     display: none;
 }
+
 .available-recipe img {
     height: var(--availablercpimgsize);
     width: var(--availablercpimgsize);
@@ -176,22 +206,26 @@ header button > svg {
     margin-right: 30px;
     margin-left: 25px;
 }
+
 .available-recipe:hover {
     background-color: rgb(250, 245, 245);
     transform: translateY(-5px);
 }
+
 .available-recipe h1 {
     margin-bottom: 20px;
     color: rgba(255, 60, 0, 0.5);
     user-select: none;
     font-weight: 600;
 }
+
 .available-recipe h2 {
     margin: none;
     user-select: none;
     font-weight: 500;
     color: rgba(50, 50, 50, 0.7);
 }
+
 .pagination-cont {
     width: 40%;
     position: absolute;
@@ -200,6 +234,7 @@ header button > svg {
     padding: 2.5rem 0;
     height: 5rem;
 }
+
 .pagebutton {
     font-size: var(--headerbtntext);
     display: flex;
@@ -211,25 +246,31 @@ header button > svg {
     cursor: pointer;
     transition: all 0.2s;
 }
+
 .pagebutton:hover {
     color: rgb(255, 94, 0);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
     transform: translateY(-3px);
 }
+
 .page-left svg {
     margin-right: 5px;
 }
+
 .page-left {
     position: absolute;
     left: 10rem;
 }
+
 .page-right {
     position: absolute;
     right: 10rem;
 }
+
 .page-right svg {
     margin-left: 5px;
 }
+
 .pagebutton svg {
     width: var(--ingredientcheckmarksize);
     height: var(--ingredientcheckmarksize);
@@ -241,64 +282,78 @@ header button > svg {
     width: 60%;
     background-color: rgb(250, 245, 245);
 }
+
 .image-and-bookmark {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-bottom: 5rem;
 }
+
 .serving-time-bookmark {
     display: flex;
     justify-content: space-around;
     margin-top: 7.5rem;
 }
+
 #bookmark-btn {
     outline: none;
     border: none;
-    background: linear-gradient(to right,rgba(255, 166, 0, 0.35), rgba(255, 60, 0, 0.6));
+    background: linear-gradient(to right, rgba(255, 166, 0, 0.35), rgba(255, 60, 0, 0.6));
     border-radius: 50%;
     width: var(--bookmarkbuttonsize);
     height: var(--bookmarkbuttonsize);
     cursor: pointer;
 }
+
 #bookmark-btn svg {
     fill: white;
 }
+
 .serving-time-bookmark div {
     display: flex;
     align-items: center;
 }
+
 .cook-time strong {
     margin-right: 10px;
     margin-left: 10px;
 }
+
 .cook-time {
     font-size: var(--cooktimesize);
     margin-right: 40px;
 }
+
 .serving-size-cont strong {
     margin-right: 10px;
     margin-left: 10px;
 }
+
 .serving-size-cont {
     font-size: var(--cooktimesize);
 }
+
 .inc-dec-servings {
     margin-left: 20px;
 }
+
 .inc-dec-servings svg {
     margin: 0 5px;
 }
+
 .image-and-title {
     position: relative;
     height: 75%;
 }
+
 .image-and-title img {
     height: var(--detailimageheight);
     width: 100%;
     filter: blur(1px);
     object-fit: cover;
 }
+
 .orange-haze-overlay {
     position: absolute;
     top: 0;
@@ -308,6 +363,7 @@ header button > svg {
     width: 100%;
     background-color: rgba(255, 190, 50, 0.25);
 }
+
 .image-and-title h1 {
     margin: 0;
     position: absolute;
@@ -321,21 +377,25 @@ header button > svg {
     font-weight: 600;
     text-align: center;
 }
+
 .recipe-title {
     box-decoration-break: clone;
     -webkit-box-decoration-break: clone;
-    background: linear-gradient(to right,rgb(255, 190, 69), rgb(255, 94, 0));
+    background: linear-gradient(to right, rgb(255, 190, 69), rgb(255, 94, 0));
     padding: 10px;
 }
+
 .ingredient-list-cont {
     padding: 3rem 0;
     background-color: #f2efee;
 }
+
 .ingredient-list-cont h1 {
     font-size: var(--ingredientfontsizetitle);
     text-align: center;
     color: rgba(255, 60, 0, 0.6);
 }
+
 .ingredient-list {
     padding: 0 3rem;
     display: grid;
@@ -343,19 +403,23 @@ header button > svg {
     row-gap: 5rem;
     column-gap: 1rem;
 }
+
 .ingredient-list::-webkit-scrollbar {
     display: none;
 }
+
 .ingredient-list span {
     display: flex;
     font-size: var(--ingredientfontsize);
 }
+
 .ingredient-list span svg {
     margin-right: 5px;
     min-width: var(--ingredientcheckmarksize);
     max-width: var(--ingredientcheckmarksize);
     height: var(--ingredientcheckmarksize);
 }
+
 .go-to-instructions {
     display: flex;
     flex-direction: column;
@@ -363,16 +427,19 @@ header button > svg {
     padding-top: 3rem;
     padding-bottom: 10rem;
 }
+
 .go-to-instructions h1 {
     color: rgba(255, 60, 0, 0.6);
     font-size: var(--ingredientfontsizetitle);
 }
+
 .go-to-instructions span {
     font-size: var(--ingredientfontsize);
     text-align: center;
     max-width: 80%;
     margin-bottom: 5rem;
 }
+
 .go-to-instructions a {
     display: flex;
     align-items: center;
@@ -383,8 +450,9 @@ header button > svg {
     border-radius: 35px;
     text-decoration: none;
     outline: none;
-    background: linear-gradient(to right,rgb(255, 190, 69), rgb(255, 94, 0));
+    background: linear-gradient(to right, rgb(255, 190, 69), rgb(255, 94, 0));
 }
+
 .go-to-instructions a svg {
     fill: white;
     width: var(--ingredientcheckmarksize);
