--- a/index.css
+++ b/index.css
@@ -41,6 +41,78 @@ body {
     box-shadow: 0px 0px 30px 1px rgba(0, 0, 0, 0.15);
 }
 
+@keyframes loading {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.invisible-content *:not(.loader, .loadspinnergeneral) {
+    opacity: 0;
+}
+
+.loader {
+    position: absolute;
+    left: 50%;
+    top: 10px;
+    width: 40px;
+    height: 40px;
+    animation: loading 2s linear infinite;
+}
+
+.loadspinnergeneral {
+    width: 20%;
+    height: 20%;
+    background-color: orangered;
+    border-radius: 50%;
+    position: absolute;
+}
+
+.loadspinner1 {
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.loadspinner2 {
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.loadspinner3 {
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+}
+
+
+.loadspinner4 {
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+}
+
+.loadspinner5 {
+    left: 5px;
+    top: 5px;
+}
+
+.loadspinner6 {
+    right: 5px;
+    top: 5px;
+}
+
+.loadspinner7 {
+    left: 5px;
+    bottom: 5px;
+}
+
+.loadspinner8 {
+    right: 5px;
+    bottom: 5px;
+}
+
 main {
     display: flex;
     min-height: calc(var(--maincontwidthheight) - 10rem);
@@ -49,6 +121,12 @@ main {
 
 .no-display {
     display: none !important;
+}
+
+.no-interaction {
+    user-select: none;
+    pointer-events: none;
+    opacity: 0.5;
 }
 
 /* HEADER */
@@ -161,14 +239,13 @@ header button>svg {
 
 /* LIST OF RECIPES */
 .recipe-list-cont {
-    height: 70rem;
     width: 40%;
     overflow: hidden;
+    position: relative;
 }
 
 .recipe-list {
     padding: 1.5rem 0;
-    height: 100%;
     width: 100%;
     display: flex;
     transition: all 0.3s;
@@ -176,7 +253,6 @@ header button>svg {
 
 .pagenation-part {
     min-width: 100%;
-    overflow-y: scroll;
 }
 
 .pagenation-part::-webkit-scrollbar {
@@ -189,8 +265,16 @@ header button>svg {
     justify-content: start;
     transition: all 0.2s;
     cursor: pointer;
-    margin-bottom: 2.5rem;
-    min-height: 12rem;
+    margin-bottom: 1.25rem;
+    min-height: 9rem;
+}
+
+.available-recipe>div h1 {
+    margin-top: 0;
+}
+
+.available-recipe>div h2 {
+    margin: 0;
 }
 
 .recipe-list::-webkit-scrollbar {
@@ -227,12 +311,14 @@ header button>svg {
 }
 
 .pagination-cont {
-    width: 40%;
+    width: 100%;
     position: absolute;
     bottom: 0;
     left: 0;
     padding: 2.5rem 0;
     height: 5rem;
+    display: flex;
+    justify-content: space-around;
 }
 
 .pagebutton {
@@ -257,15 +343,9 @@ header button>svg {
     margin-right: 5px;
 }
 
-.page-left {
-    position: absolute;
-    left: 10rem;
-}
+.page-left {}
 
-.page-right {
-    position: absolute;
-    right: 10rem;
-}
+.page-right {}
 
 .page-right svg {
     margin-left: 5px;
