--- a/index.css
+++ b/index.css
@@ -250,7 +250,7 @@ header button>svg {
     overflow-y: scroll;
     transition: all 0.3s linear;
     width: 100%;
-    box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
 }
