--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
     --maincontwidthheight: 130rem;
     --availablercpimgsize: 6rem;
     --bookmarkbuttonsize: 4.5rem;
+    --newrecipewidth: 1200px;
     --cooktimesize: 2rem;
     --recipe-title: 3.25rem;
     --detailimageheight: 22.5rem;
@@ -35,7 +36,7 @@ body {
     overflow: hidden;
     background-color: white;
     width: var(--maincontwidthheight);
-    min-height: var(--maincontwidthheight);
+    min-height: 1300px;
     margin: 0 auto;
     border-radius: 10px;
     box-shadow: 0px 0px 30px 1px rgba(0, 0, 0, 0.15);
@@ -118,7 +119,7 @@ body {
 
 main {
     display: flex;
-    min-height: calc(var(--maincontwidthheight) - 10rem);
+    min-height: calc(1300px - 100px );
     position: relative;
     z-index: 4;
 }
@@ -244,19 +245,32 @@ header button>svg {
 .bookmarked-recipes-cont {
     max-height: 0px;
     min-height: 0px;
-    background-color: rgb(250, 245, 245);
+    background: linear-gradient(to bottom, rgb(250, 245, 245) 25%, rgb(255, 255, 240) 75%);
     position: absolute;
     top: 98px;
     overflow-y: scroll;
-    transition: all 0.3s linear;
+    overflow-x: hidden;
+    transition: all 0.2s ease-in-out;
     width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
+    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset; */
 }
-.bookmarked-recipes-cont::-webkit-scrollbar {
+.bookmarked-recipes-cont::-webkit-scrollbar-track
+{
+    background-color: rgba(105, 105, 105, 0.15);
+}
+
+.bookmarked-recipes-cont::-webkit-scrollbar
+{
+	width: 5px;
     display: none;
 }
+
+.bookmarked-recipes-cont::-webkit-scrollbar-thumb
+{
+	background-color: rgba(0, 0, 0, 0.25);
+}
+
+
 .no-bookmarks-question-mark {
     display: flex;
     font-size: var(--ingredientfontsizetitle);
@@ -290,6 +304,7 @@ header button>svg {
     width: 100%;
     display: flex;
     transition: all 0.3s;
+    min-height: 50px;
 }
 
 .pagenation-part {
@@ -322,7 +337,7 @@ header button>svg {
     display: none;
 }
 .bookmarked-recipes-cont > .available-recipe:hover {
-    background-color: white;
+    background-color: rgba(255, 94, 0, 0.15);
 }
 .available-recipe img {
     height: var(--availablercpimgsize);
@@ -610,10 +625,12 @@ header button>svg {
 }
 
 .add-recipe-modal {
-    width: 1200px;
+    width: var(--newrecipewidth);
     height: 600px;
     border-radius: 10px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
 }
 .add-recipe-modal-inputs {
     display: flex;
@@ -632,6 +649,7 @@ header button>svg {
 .input-name-and-input {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .input-name-and-input h1 {
     color: rgb(80, 80, 80);
@@ -664,4 +682,184 @@ header button>svg {
     background: linear-gradient(to right, rgb(255, 190, 69), rgb(255, 94, 0));
     width: 100px;
     margin: auto;
+}
+@media only screen and (max-width: 1500px) {
+    :root {
+        --maincontwidthheight: 110rem;
+        --newrecipewidth: 100rem;
+        --newrecipeheight: 50rem;
+    }
+
+    .input-name-and-input input {
+        height: 25px;
+        font-size: 1.5rem;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    :root {
+        --maincontwidthheight: 100rem;
+        --newrecipewidth: 90rem;
+        --newrecipeheight: 50rem;
+    }
+
+    .input-name-and-input input {
+        height: 25px;
+        font-size: 1.5rem;
+    }
+
+    header>form input {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 1050px) {
+    :root {
+        --maincontwidthheight: 80rem;
+        --newrecipewidth: 70rem;
+        --newrecipeheight: 50rem;
+        --cooktimesize: 1.8rem;
+    }
+    .add-recipe-modal-inputs {
+        flex-direction: column;
+        overflow-y: scroll;
+        align-items: center;
+        border-bottom: 4px solid rgba(128, 128, 128, 0.25);
+    }
+    .input-name-and-input input {
+        height: 25px;
+        font-size: 1.5rem;
+    }
+
+    header>form input {
+        width: 50%;
+    }
+
+    #ZaForumu>button {
+        font-size: 0;
+        width: 50px;
+        padding: 0;
+    }
+
+    #ZaForumu>button>svg {
+        margin: auto;
+    }
+
+    header>form {
+        width: 30%;
+    }
+    header button {
+        padding: 0 10px;
+    }
+    .cook-time {
+        margin-right: 10px;
+    }
+    .inc-dec-servings {
+        margin-left: 10px;
+    }
+    
+    .add-recipe-modal-inputs > div > h1 {
+        text-align: center;
+    }
+    .add-recipe-modal-inputs::-webkit-scrollbar {
+     width: 8px;
+     background-color: #F5F5F5;
+    }
+    .add-recipe-modal-inputs > div {
+        width: 75%;
+        padding: 4rem 5rem 4rem;
+    }
+    .add-recipe-modal-inputs::-webkit-scrollbar-thumb {
+      background-color: rgba(128, 128, 128, 0.25);
+      border: 2px solid transparent;
+    }
+}
+@media only screen and (max-width: 840px) {
+    :root {
+        --maincontwidthheight: 65rem;
+        --newrecipewidth: 50rem;
+        --newrecipeheight: 50rem;
+        --headerbtntext: 0;
+    }
+    main {
+        flex-direction: column;
+    }
+    header button {
+        padding: 0 25px;
+    }
+    header button > svg {
+        margin: 0;
+    }
+    .recipe-list-cont {
+        width: 100%;
+    }
+    .recipe-details {
+        width: 100%;
+    }
+    .bookmarked-recipes-cont {
+        width: 300px;
+        right: 0;
+    }
+    .pagination-cont {
+        position: static;
+    }
+    .pagination-cont button {
+        font-size: 1.5rem;
+    }
+    .add-recipe-modal-inputs > div {
+        width: 75%;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .input-name-and-input h1 {
+        font-size: 1.5rem;
+        /* font-weight: bold; */
+    }
+}
+@media only screen and (max-width: 690px){
+    :root {
+        --maincontwidthheight: 55rem;
+        --newrecipewidth: 40rem;
+        --newrecipeheight: 40rem;
+        --recipe-title: 2.5rem
+    }
+    #ZaForumu input::placeholder {
+        font-size: 0;
+    }
+
+}
+@media only screen and (max-width: 590px){
+    :root {
+        --maincontwidthheight: 45rem;
+        --newrecipewidth: 35rem;
+    }
+    header button {
+        padding: 0 5px;
+    }
+    #ZaForumu {
+        width: 50%;
+    }
+    #forkify-logo {
+        height: 30px;
+    }
+    .available-recipe > div h1 {
+        padding-right: 1rem;
+    }
+}
+@media only screen and (max-width: 490px) {
+    :root {
+        --maincontwidthheight: 35rem;
+        --newrecipewidth: 30rem;
+        --newrecipeheight: 40rem;
+    }
+    #forkify-logo {
+        display: none;
+    }
+    .serving-time-bookmark > div {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    #bookmark-btn {
+        align-self: flex-end;
+    }
 }
