--- a/index.css
+++ b/index.css
@@ -137,6 +137,11 @@ main {
     pointer-events: none;
     opacity: 0.5;
 }
+.no-interaction-harsh {
+    user-select: none;
+    pointer-events: none;
+    opacity: 0;
+}
 .disabled {
     user-select: none;
     pointer-events: none;
