--- a/index.css
+++ b/index.css
@@ -421,6 +421,9 @@ header button>svg {
 .recipe-details {
     width: 60%;
     background-color: rgb(250, 245, 245);
+    /* transition: all 0.5s; */
+}
+.recipe-details-transp-cont {
     transition: all 0.5s;
 }
 
